--- a/css/style.css
+++ b/css/style.css
@@ -770,9 +770,9 @@ svg {
     }
 
     .footer__container {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         align-items: center;
-        text-align: initial;
+        text-align: center;
     }
 
     .footer__title {
